# celer_infer

./: .gitignore  CMakeLists.txt  README.md  base_line_micro.cpp  benchmark.sh  benchmark_results.json  compare_attention_scores.py  debug_attention_detailed.py  debug_wo_weight.py  llm_minimind_model.py  tensor_op.hpp
.github/: copilot-instructions.md
.github/workflows/: ci.yml  consistency_validation.yml
cpp/: CMakeLists.txt  base_line_micro.cpp  base_line_simd.cpp  test.cpp
cpp/src/models/: dit.cpp  dit_cuda.cu  dit_cuda_fp16.cu  dit_extreme.cpp  dit_simd.cpp  minimind.cpp  minimind_cuda.cu  minimind_cuda_fp16.cu  minimind_extreme.cpp  minimind_simd.cpp  minimind_unified.cpp
cpp/src/ops/: backend_config.hpp  tensor_op_cuda.cu  tensor_op_cuda.cuh  tensor_op_extreme.hpp  tensor_op_fusion.hpp  tensor_op_quant.hpp  tensor_op_simd.hpp
docs/: ARCHITECTURE.md  BENCHMARK_REPORT.md  COMPLETION_REPORT.md  CONSISTENCY_REPORT.md  DIRECTORY_GUIDE.md  DOCUMENTATION_INDEX.md  DiT_INFERENCE.md  MODELS.md  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SCRIPT_MIGRATION.md  VALIDATION_REPORT.md
docs/archives/: BENCHMARKING.md  CHANGES.md  DEBUGGING_LOGITS_MISMATCH.md
docs/legacy/: compare_attn_probs_output.py  compare_attn_proj.py  compare_logits.py  compute_full_attention.py  debug_layer0_detailed.py  debug_residual.py
models/minimind/: README.md  config.json
python/: __init__.py  __main__.py
python/core/: __init__.py  dit.py  minimind_model.py
python/debug/: __init__.py  debug_ffn.py  minimind_debug.py
python/export/: __init__.py  dit_dumper.py  minimind_dumper.py
python/inference/: __init__.py  dit_forward.py  minimind_forward.py
python/tools/: __init__.py  benchmark_backends.py  benchmark_full.py  benchmark_helper.py  benchmark_seq_lengths.py  build_helper.py  clean_helper.py  dit_benchmark.py  model_scale_benchmark.py  validate_helper.py  verify_consistency.py
python/validate/: __init__.py  compare_attention_pipeline.py  compare_ffn.py  compare_intermediates.py  compare_qkv.py  dit_validate.py  extract_attn_proj_torch.py
script/: debug_layer0.py  generate_random_model.py  llm_minimind_dump.py  llm_minimind_forward.py  llm_minimind_model.py
scripts/: build_cpp.sh  clean.sh  cleanup_legacy.sh  run_validation.sh  unified_benchmark.py
